inicia a implementação dos testes de integração